--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,8 +14,11 @@
 		<link
 			href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
 			rel="stylesheet" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css" />
 
-		<title>Poleeducation.in.ua</title>
+		<title>POLEEducation.in.ua</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
