add design on home page

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,15 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 	<head>
 		<meta charset="utf-8" />
-
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1" />
 
 		<meta
 			name="description"
-			content="" />
+			content="PoleEducation - навчальний портал для тренерів з полденсу, полотен і кільців. Отримуйте доступ до матеріалів, реєструйтеся на змагання і тренування, розвивайте свої навички разом з нами." />
+		<meta
+			name="keywords"
+			content="полденс, акробатика на полотнах, кільця, спорт, тренування, змагання, навчання полденс, спортсмени, тренери, Pole Education" />
+		<meta
+			name="author"
+			content="FAIMCore" />
+
+		<!-- Open Graph -->
+		<meta
+			property="og:title"
+			content="PoleEducation - Платформа для тренерів з полденсу" />
+		<meta
+			property="og:description"
+			content="Портал для тренувань та змагань з полденсу, полотен і кільців. Навчайтеся, змагайтеся та вдосконалюйте свої навички!" />
+		<meta
+			property="og:image"
+			content="URL_до_зображення" />
+		<meta
+			property="og:url"
+			content="https://poleeducation.in.ua" />
+		<meta
+			property="og:type"
+			content="website" />
+
+		<!-- Twitter Card -->
+		<meta
+			name="twitter:card"
+			content="summary_large_image" />
+		<meta
+			name="twitter:title"
+			content="PoleEducation - Платформа для тренерів з полденсу" />
+		<meta
+			name="twitter:description"
+			content="Портал для тренувань та змагань з полденсу, полотен і кільців. Навчайтеся, змагайтеся та вдосконалюйте свої навички!" />
+		<meta
+			name="twitter:image"
+			content="URL_до_зображення" />
+		<meta
+			name="twitter:site"
+			content="@ваш_твітер_аккаунт" />
+
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
 		<link
 			href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
@@ -18,12 +58,10 @@
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css" />
 
-		<title>POLEEducation.in.ua</title>
+		<title>PoleEducation - Сучасний Навчальний портал для тренерів</title>
 	</head>
 	<body>
-		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
-		<!-- Элемент для модальных окон -->
 		<div id="modal-root"></div>
 	</body>
 </html>
